kubernetes/3-ansible-eda-debug-kubernetes.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ansible-eda
    app.kubernetes.io/version: 1.0.0
  name: ansibleeda
spec:
  ports:
    - name: http
      port: 5001
      protocol: TCP
      targetPort: 5001
  selector:
    app.kubernetes.io/name: ansible-eda
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/name: ansible-eda
    app.openshift.io/runtime: ansible
  name: ansible-eda
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0
      app.kubernetes.io/name: ansible-eda
  template:
    metadata:
      labels:
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/name: ansible-eda
    spec:
      serviceAccountName: ansible-eda
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/rhdevelopers/k8s-ansible-eda:alertmanager
          imagePullPolicy: Always
          name: ansible-eda
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 5001
              name: http
              protocol: TCP
