kubernetes/1-quarkus-monitor-kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-06-30 - 12:45:38 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: quarkus-monitor
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: quarkus
  name: quarkus-monitor
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-monitor
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-monitor
  name: quarkus-monitor
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-monitor
    weight: 100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-06-30 - 12:45:38 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/name: quarkus-monitor
  name: quarkus-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0
      app.kubernetes.io/name: quarkus-monitor
      app.openshift.io/runtime: quarkus
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2023-06-30 - 12:45:38 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/name: quarkus-monitor
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/lordofthejars/quarkus-monitor:1.0.0
          imagePullPolicy: Always
          name: quarkus-monitor
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
