kubernetes/4-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-example
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30903
    port: 9093
    protocol: TCP
    targetPort: web
  selector:
    alertmanager: example
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: alertmanager-example
  name: alertmanager-example
spec:
  port:
    targetPort: 9093
  to:
    kind: Service
    name: alertmanager-example
    weight: 100
