kubernetes/5-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-monitor
  name: quarkus-monitor
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-monitor
    weight: 100
